--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.1.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.10.0",
     "jest": "23.4.1",
     "react-test-renderer": "16.4.1"
   },
