--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.3.0",
+    "lodash": "^4.17.10",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-elements": "^0.19.1",
+    "react-native-image-picker": "^0.26.10",
+    "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-navigation": "^1.1.474",
+    "react-native-snackbar": "^0.4.7",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
